--- a/src/app/list-resto/list-resto.component.html
+++ b/src/app/list-resto/list-resto.component.html
@@ -1,1 +1,31 @@
-<p>list-resto works!</p>
+<div class="container">
+    <h2 class="mt-2 mb-4">List of all restaurant!</h2>
+
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Address</th>
+            <th scope="col">Email</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of collection">
+            <td>{{item.id}}</td>
+            <td>{{item.name}}</td>
+            <td>{{item.address}}</td>
+            <td>{{item.email}}</td>
+            <td>
+              <span class="mr-3" (click)="deleteResto(item.id)">
+                <i class="fa fa-trash"  style="font-size: 27px;color:red;cursor: pointer;"></i>
+              </span>
+              <a routerLink="/update/{{item.id}}">
+                <i class="fa fa-edit" style="font-size: 27px;color:green;cursor: pointer;"></i>
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+</div>
